<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="name_text"
        android:title="@string/pref_name_user"
        android:defaultValue="@string/pref_default_name_user"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="mail_text"
        android:title="@string/pref_mail_user"
        android:defaultValue="@string/pref_default_mail_user"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:maxLines="1" />

    <com.mdl.utils.MultipleEditTextDialogPreference
        android:key="password_text"
        android:title="@string/pref_password_user" />

</PreferenceScreen>