<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welome_text_home"
        android:id="@+id/tv_welcome_login"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_username_login"
        android:inputType="textNoSuggestions|textPersonName"
        android:hint="@string/username_login"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/tv_connect_login"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password_login"
        android:hint="@string/password_login"
        android:layout_below="@+id/et_username_login"
        android:layout_alignLeft="@+id/et_username_login"
        android:layout_marginTop="26dp"
        android:layout_alignRight="@+id/btn_connect_login"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_login"
        android:id="@+id/tv_connect_login"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/tv_welcome_login"
        android:layout_alignLeft="@+id/et_username_login"
        android:layout_alignStart="@+id/et_username_login" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/send_login"
        android:id="@+id/btn_connect_login"
        android:layout_below="@+id/et_password_login"
        android:layout_alignRight="@+id/et_username_login" />
</RelativeLayout>