<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_layout"
        android:id="@+id/tv_title_edit_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:phoneNumber="false"
        android:singleLine="false"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/et_name"
        android:layout_alignLeft="@+id/tv_title_edit_name"
        android:layout_alignStart="@+id/tv_title_edit_name"
        android:layout_below="@+id/tv_title_edit_name"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:hint="@string/name_event_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/start_date_layout"
        android:id="@+id/tv_title_edit_start_date"
        android:layout_marginTop="30dp"
        android:phoneNumber="false"
        android:layout_below="@+id/et_name"
        android:layout_alignLeft="@+id/tv_title_edit_name"
        android:layout_alignStart="@+id/tv_detail_title_name" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btn_edit_start_date"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:layout_below="@+id/tv_title_edit_start_date"
        android:layout_alignLeft="@+id/tv_title_edit_start_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/end_date_layout"
        android:id="@+id/tv_title_edit_end_date"
        android:phoneNumber="false"
        android:layout_alignLeft="@+id/tv_title_edit_name"
        android:layout_alignStart="@id/tv_detail_title_start_date"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_edit_start_date" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btn_edit_end_date"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:layout_below="@+id/tv_title_edit_end_date"
        android:layout_alignLeft="@+id/tv_title_edit_start_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_layout"
        android:id="@+id/tv_title_edit_create_by"
        android:phoneNumber="false"
        android:layout_alignStart="@+id/tv_title_end_date"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/btn_edit_end_date"
        android:layout_alignLeft="@+id/tv_title_edit_end_date" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_edit_create_by"
        android:layout_alignStart="@id/tv_title_end_date"
        android:layout_below="@+id/tv_title_edit_create_by"
        android:layout_alignLeft="@+id/tv_title_edit_create_by"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/room_layout"
        android:id="@+id/tv_title_edit_room"
        android:phoneNumber="false"
        android:layout_below="@+id/tv_edit_create_by"
        android:layout_alignLeft="@+id/tv_edit_create_by"
        android:layout_alignStart="@+id/tv_title_create_by"
        android:layout_marginTop="30dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_edit"
        android:layout_below="@+id/tv_title_edit_room"
        android:layout_alignLeft="@+id/tv_title_edit_room"
        android:layout_alignStart="@+id/tv_title_edit_room"
        android:layout_marginRight="100dp" />

</RelativeLayout>