<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mdl.androidapp.DetailItemActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rl_load_detail_activity">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="134dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rl_detail_activity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_layout"
            android:id="@+id/tv_title_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="33dp"
            android:phoneNumber="false"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_detail_title_name"
            android:layout_alignLeft="@+id/tv_title_name"
            android:layout_alignStart="@+id/tv_title_name"
            android:layout_below="@+id/tv_title_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/start_date_layout"
            android:id="@+id/tv_title_start_date"
            android:layout_marginTop="30dp"
            android:phoneNumber="false"
            android:layout_below="@+id/tv_detail_title_name"
            android:layout_alignLeft="@+id/tv_title_name"
            android:layout_alignStart="@+id/tv_detail_title_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_detail_title_start_date"
            android:layout_alignStart="@+id/tv_title_name"
            android:layout_below="@+id/tv_title_start_date"
            android:layout_alignLeft="@+id/tv_detail_title_name"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/end_date_layout"
            android:id="@+id/tv_title_end_date"
            android:phoneNumber="false"
            android:layout_alignLeft="@+id/tv_title_name"
            android:layout_alignStart="@id/tv_detail_title_start_date"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/tv_detail_title_start_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_detail_title_end_date"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/tv_detail_title_name"
            android:layout_alignStart="@id/tv_title_end_date"
            android:layout_below="@+id/tv_title_end_date"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_layout"
            android:id="@+id/tv_title_create_by"
            android:phoneNumber="false"
            android:layout_below="@+id/tv_detail_title_end_date"
            android:layout_alignLeft="@+id/tv_title_end_date"
            android:layout_alignStart="@+id/tv_title_end_date"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_detail_title_create_by"
            android:layout_alignStart="@id/tv_title_end_date"
            android:layout_below="@+id/tv_title_create_by"
            android:layout_alignLeft="@+id/tv_title_end_date"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/room_layout"
            android:id="@+id/tv_title_room"
            android:phoneNumber="false"
            android:layout_below="@+id/tv_detail_title_create_by"
            android:layout_alignLeft="@+id/tv_title_create_by"
            android:layout_alignStart="@+id/tv_title_create_by"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/tv_detail_title_room"
            android:layout_alignStart="@id/tv_title_end_date"
            android:layout_below="@+id/tv_title_room"
            android:layout_alignLeft="@+id/tv_title_create_by"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

</RelativeLayout>
